--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -37,27 +37,22 @@
 <header class="section-header">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Brand<b>Name</b></a>
+        <a class="navbar-brand" href="#">Merch<b>@ISCTE</b></a>
         <button class="navbar-toggler" data-target="#navbarCollapse" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Collection of nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse justify-content-start" id="navbarCollapse">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Home</a>
-                <a class="nav-item nav-link" href="#">About</a>
+                <a class="nav-item nav-link" href="{% url 'loja:index' %}">Ínicio</a>
+                <a class="nav-item nav-link" href="#sobre">Sobre</a>
                 <div class="nav-item dropdown">
                     <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" href="#">Services</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">Web Design</a>
-                        <a class="dropdown-item" href="#">Web Development</a>
-                        <a class="dropdown-item" href="#">Graphic Design</a>
-                        <a class="dropdown-item" href="#">Digital Marketing</a>
                     </div>
                 </div>
-                <a class="nav-item nav-link active" href="#">Pricing</a>
                 <a class="nav-item nav-link" href="#">Blog</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
             </div>
             <form class="navbar-form form-inline">
                 <div class="input-group search-box">
@@ -68,24 +63,31 @@
                 </div>
             </form>
             <div class="navbar-nav action-buttons ml-auto">
+                <a class="nav-item nav-link active" href="{% url 'loja:carrinho' %}">Carrinho</a>
+                {% if not request.user.is_authenticated %}
                 <a class="nav-item nav-link dropdown-toggle mr-3" data-toggle="dropdown" href="#">Login</a>
                 <div class="dropdown-menu login-form">
-                    <form action="/examples/actions/confirmation.php" method="post">
+                    <form action="{% url 'loja:loginview' %}" method="post">
+                        {% csrf_token %}
                         <div class="form-group">
                             <label>Username</label>
-                            <input class="form-control" required="required" type="text">
+                            <input class="form-control" id="username" name="username" required="required" type="text">
                         </div>
                         <div class="form-group">
                             <div class="clearfix">
                                 <label>Password</label>
                                 <a class="float-right text-muted" href="#"><small>Forgot?</small></a>
                             </div>
-                            <input class="form-control" required="required" type="password">
+                            <input class="form-control" id="pass" name="pass" required="required" type="password">
                         </div>
                         <input class="btn btn-primary btn-block" type="submit" value="Login">
                     </form>
                 </div>
-                <a class="btn btn-primary" href="#">Get Started</a>
+                <a class="btn btn-primary" href="{% url 'loja:registaruser' %}">Registar</a>
+                {% else %}
+                <a class="nav-item nav-link dropdown-toggle mr-3" href="{% url 'loja:logoutview' %}">Logout</a>
+                {% endif %}
+
             </div>
         </div>
     </nav>
@@ -93,46 +95,19 @@
 
 {% endblock %}
 
+<div class="demo">
+    {% block blocobody %}
+    <!-- all other page content -->
+    X
 
-{% block blocobody %}
+    <p>
+        sadafd
+    </p>
 
-<div>
-    <br>
-    Centro da Página
-    <br><br>
 
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br><br>
-
-    <br>
+    X
+    {% endblock %}
 </div>
-
-{% endblock %}
 
 
 {% block footer-dark %}
@@ -157,7 +132,7 @@
                         <li><a href="#">Careers</a></li>
                     </ul>
                 </div>
-                <div class="col-md-6 item text">
+                <div class="col-md-6 item text" id="sobre">
                     <h3>Sobre</h3>
                     <p>Cadeira de DIAM do 3ºAno de LEI no ISCTE-IUL.</p>
                 </div>
@@ -165,10 +140,11 @@
                         class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
                         href="#"><i class="icon ion-social-instagram"></i></a></div>
             </div>
-            <p class="copyright">Company Name © 2018</p>
+            <p class="copyright">Merch@ISCTE © 2022</p>
         </div>
     </footer>
 </div>
+
 
 {% endblock %}
 
