--- a/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
@@ -4,7 +4,7 @@
     Criar Utilizador
 {% endblock %}
 
-{% block blocotopo %}
+{% block blocobody %}
 
 <h1>Novo Utilizador:</h1>
 {% load static %}
@@ -22,15 +22,41 @@
         <input name="myfile" type="file"> <br>
         <br>
         <input type="Submit" value="Registar" /><br>
-        <br>
-        <a href="{% url 'loja:index' %}">Voltar</a>
 </form>
 
+    <br>
+<p>
+    x
+</p>
+        <br><br>
+<p>
+    x
+</p>
+        <br><br>
+<p>
+    x
+</p>
+        <br><br>
+<p>
+    x
+</p>
+        <br><br>
+<p>
+    x
+</p>
+        <br><br>
+<p>
+    x
+</p>
+        <br><br>
+<p>
+    x
+</p>
+        <br><br>
+<p>
+    x
+</p>
+        <br>
 {% endblock %}
 
 
-{% block blocoopcoes %}
-
-
-
-{% endblock %}
