--- a/Projeto/Merch_ISCTE/loja/static/loja/css/style.css
+++ b/Projeto/Merch_ISCTE/loja/static/loja/css/style.css
@@ -1,3 +1,8 @@
+/*
+___________________
+Header
+___________________
+*/
 
 body {
 	font-family: 'Varela Round', sans-serif;
@@ -152,11 +157,42 @@ body {
 		display: block;
 	}
 }
+
 /*
 ___________________
-Header
+Footer Contain
 ___________________
 */
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+}
+
+.demo {
+  margin: 0 auto;
+  padding-top: 32px;
+  max-width: 640px;
+  width: 94%;
+}
+
+.demo h1 {
+  margin-top: 0;
+}
+
 
 /*
 ___________________
@@ -165,6 +201,10 @@ ___________________
 */
 
 .footer-dark {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   padding:50px 0;
   color:#f0f9ff;
   background-color:#282d32;
