--- a/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
@@ -15,6 +15,10 @@
         <label>Password:</label>
         <input type="password" name="pass" id="pass" value="" /><br>
         <label>E-mail:</label>
+        <!--
+        add first name
+        add last name
+        -->
         <input type="text" name="email" id="email" value="" /><br>
         <label>Curso:</label>
         <input type="text" name="curso" id="curso" value="" /><br>
@@ -24,39 +28,7 @@
         <input type="Submit" value="Registar" /><br>
 </form>
 
-    <br>
-<p>
-    x
-</p>
-        <br><br>
-<p>
-    x
-</p>
-        <br><br>
-<p>
-    x
-</p>
-        <br><br>
-<p>
-    x
-</p>
-        <br><br>
-<p>
-    x
-</p>
-        <br><br>
-<p>
-    x
-</p>
-        <br><br>
-<p>
-    x
-</p>
-        <br><br>
-<p>
-    x
-</p>
-        <br>
+
 {% endblock %}
 
 
