--- a/Projeto/Merch_ISCTE/loja/static/loja/css/style.css
+++ b/Projeto/Merch_ISCTE/loja/static/loja/css/style.css
@@ -1,198 +1,228 @@
 /*
 ___________________
+List
+____________________
+ */
+
+ul {
+    margin: 0 auto;
+    text-align: center;
+}
+
+li {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.common-list {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 1rem;
+}
+
+@media (min-width: 600px) {
+    .common-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 900px) {
+    .common-list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/*
+___________________
 Header
 ___________________
 */
 
 body {
-	font-family: 'Varela Round', sans-serif;
+    font-family: 'Varela Round', sans-serif;
 }
+
 .form-control {
-	box-shadow: none;
-	border-radius: 4px;
+    box-shadow: none;
+    border-radius: 4px;
 }
+
 .navbar {
-	background: #fff;
-	padding-left: 16px;
-	padding-right: 16px;
-	border-bottom: 1px solid #dfe3e8;
-	border-radius: 0;
+    background: #fff;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-bottom: 1px solid #dfe3e8;
+    border-radius: 0;
 }
+
 .nav-link img {
-	border-radius: 50%;
-	width: 36px;
-	height: 36px;
-	margin: -8px 0;
-	float: left;
-	margin-right: 10px;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    float: left;
+    margin: -8px 10px -8px 0;
 }
+
 .navbar .navbar-brand {
-	padding-left: 0;
-	font-size: 20px;
-	padding-right: 50px;
+    padding-left: 0;
+    font-size: 20px;
+    padding-right: 50px;
 }
+
 .navbar .navbar-brand b {
-	color: #5c6ac4;
+    color: #5c6ac4;
 }
+
 .navbar .form-inline {
-	display: inline-block;
+    display: inline-block;
 }
+
 .navbar .navbar-nav {
-	position: relative;
+    position: relative;
 }
+
 .navbar a, .navbar a:active {
-	color: #888;
-	font-size: 15px;
-	background: transparent;
+    color: #888;
+    font-size: 15px;
+    background: transparent;
 }
+
 .search-box {
-	position: relative;
+    position: relative;
 }
+
 .search-box input {
-	padding-right: 35px;
-	border-color: #dfe3e8;
-	border-radius: 4px !important;
-	box-shadow: none
+    padding-right: 35px;
+    border-color: #dfe3e8;
+    border-radius: 4px !important;
+    box-shadow: none
 }
+
 .search-box .input-group-text {
-	min-width: 35px;
-	border: none;
-	background: transparent;
-	position: absolute;
-	right: 0;
-	z-index: 9;
-	padding: 7px;
-	height: 100%;
+    min-width: 35px;
+    border: none;
+    background: transparent;
+    position: absolute;
+    right: 0;
+    z-index: 9;
+    padding: 7px;
+    height: 100%;
 }
+
 .search-box i {
-	color: #a0a5b1;
-	font-size: 19px;
+    color: #a0a5b1;
+    font-size: 19px;
 }
+
 .navbar .btn-primary, .navbar .btn-primary:active {
-	color: #fff;
-	background: #5c6ac4 !important;
-	padding-top: 8px;
-	padding-bottom: 6px;
-	border-radius: 4px;
-	vertical-align: middle;
-	border: none;
-	min-width: 120px;
-	margin: 2px 0;
+    color: #fff;
+    background: #5c6ac4 !important;
+    padding-top: 8px;
+    padding-bottom: 6px;
+    border-radius: 4px;
+    vertical-align: middle;
+    border: none;
+    min-width: 120px;
+    margin: 2px 0;
 }
+
 .navbar .btn-primary:hover, .navbar .btn-primary:focus {
-	color: #fff;
-	background: #5765c1 !important;
+    color: #fff;
+    background: #5765c1 !important;
 }
+
 .navbar .action-buttons .dropdown-toggle::after {
-	display: none;
+    display: none;
 }
+
 .search-box .btn span {
-	transform: scale(0.9);
-	display: inline-block;
+    transform: scale(0.9);
+    display: inline-block;
 }
+
 .navbar .nav-item i {
-	font-size: 18px;
+    font-size: 18px;
 }
+
 .navbar .dropdown-item i {
-	font-size: 16px;
-	min-width: 22px;
+    font-size: 16px;
+    min-width: 22px;
 }
+
 .navbar .dropdown-menu {
-	border-radius: 1px;
-	border-color: #e5e5e5;
-	box-shadow: 0 2px 8px rgba(0,0,0,.05);
+    border-radius: 1px;
+    border-color: #e5e5e5;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, .05);
 }
+
 .navbar .navbar-nav .dropdown-menu a {
-	padding: 8px 20px;
-	line-height: normal;
+    padding: 8px 20px;
+    line-height: normal;
 }
+
 .navbar .navbar-form {
-	border: none;
+    border: none;
 }
+
 .navbar .navbar-form-wrapper {
-	padding: 0 15px;
+    padding: 0 15px;
 }
+
 .navbar .login-form label {
-	color: #888;
-	font-weight: normal;
+    color: #888;
+    font-weight: normal;
 }
+
 .navbar .dropdown-menu.login-form {
-	width: 280px;
-	padding: 20px;
-	left: auto;
-	right: 0;
-	font-size: 14px;
+    width: 280px;
+    padding: 20px;
+    left: auto;
+    right: 0;
+    font-size: 14px;
 }
+
 .navbar .navbar-nav .dropdown-menu.login-form a {
-	padding: 0 !important;
-	color: #5c6ac4;
-	font-weight: normal;
+    padding: 0 !important;
+    color: #5c6ac4;
+    font-weight: normal;
 }
-.navbar .navbar-nav .dropdown-menu.login-form a:hover{
-	text-decoration: underline;
+
+.navbar .navbar-nav .dropdown-menu.login-form a:hover {
+    text-decoration: underline;
 }
+
 .navbar .dropdown-menu.login-form .checkbox-inline {
-	margin-top: 10px;
-}
-@media (min-width: 1200px){
-	.form-inline .input-group {
-		width: 300px;
-		margin-left: 30px;
-	}
-}
-@media (max-width: 768px){
-	.navbar .dropdown-menu.login-form {
-		width: 100%;
-		padding: 10px 15px;
-		background: transparent;
-		border: none;
-	}
-	.navbar .form-inline {
-		display: block;
-	}
-	.navbar .input-group {
-		width: 100%;
-	}
-	.navbar .navbar-nav .btn-primary, .navbar .navbar-nav .btn-primary:active {
-		display: block;
-	}
+    margin-top: 10px;
 }
 
-/*
-___________________
-Footer Contain
-___________________
-*/
-
-html {
-  height: 100%;
-  box-sizing: border-box;
+@media (min-width: 1200px) {
+    .form-inline .input-group {
+        width: 300px;
+        margin-left: 30px;
+    }
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
+@media (max-width: 768px) {
+    .navbar .dropdown-menu.login-form .dropdown-menu.categoria-form {
+        width: 100%;
+        padding: 10px 15px;
+        background: transparent;
+        border: none;
+    }
 
-body {
-  position: relative;
-  margin: 0;
-  padding-bottom: 6rem;
-  min-height: 100%;
-}
+    .navbar .form-inline {
+        display: block;
+    }
 
-.demo {
-  margin: 0 auto;
-  padding-top: 32px;
-  max-width: 640px;
-  width: 94%;
-}
+    .navbar .input-group {
+        width: 100%;
+    }
 
-.demo h1 {
-  margin-top: 0;
+    .navbar .navbar-nav .btn-primary, .navbar .navbar-nav .btn-primary:active {
+        display: block;
+    }
 }
-
 
 /*
 ___________________
@@ -200,96 +230,3 @@ Footer
 ___________________
 */
 
-.footer-dark {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding:50px 0;
-  color:#f0f9ff;
-  background-color:#282d32;
-}
-
-.footer-dark h3 {
-  margin-top:0;
-  margin-bottom:12px;
-  font-weight:bold;
-  font-size:16px;
-}
-
-.footer-dark ul {
-  padding:0;
-  list-style:none;
-  line-height:1.6;
-  font-size:14px;
-  margin-bottom:0;
-}
-
-.footer-dark ul a {
-  color:inherit;
-  text-decoration:none;
-  opacity:0.6;
-}
-
-.footer-dark ul a:hover {
-  opacity:0.8;
-}
-
-@media (max-width:767px) {
-  .footer-dark .item:not(.social) {
-    text-align:center;
-    padding-bottom:20px;
-  }
-}
-
-.footer-dark .item.text {
-  margin-bottom:36px;
-}
-
-@media (max-width:767px) {
-  .footer-dark .item.text {
-    margin-bottom:0;
-  }
-}
-
-.footer-dark .item.text p {
-  opacity:0.6;
-  margin-bottom:0;
-}
-
-.footer-dark .item.social {
-  text-align:center;
-}
-
-@media (max-width:991px) {
-  .footer-dark .item.social {
-    text-align:center;
-    margin-top:20px;
-  }
-}
-
-.footer-dark .item.social > a {
-  font-size:20px;
-  width:36px;
-  height:36px;
-  line-height:36px;
-  display:inline-block;
-  text-align:center;
-  border-radius:50%;
-  box-shadow:0 0 0 1px rgba(255,255,255,0.4);
-  margin:0 8px;
-  color:#fff;
-  opacity:0.75;
-}
-
-.footer-dark .item.social > a:hover {
-  opacity:0.9;
-}
-
-.footer-dark .copyright {
-  text-align:center;
-  padding-top:24px;
-  opacity:0.3;
-  font-size:13px;
-  margin-bottom:0;
-}
