--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -10,6 +10,7 @@
     </title>
     <!-- Css -->
     {% load static %}
+    <link href="{% static 'loja/css/style.css' %}" rel="stylesheet" type="text/css">
     <!-- Header -->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
@@ -18,10 +19,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <!-- Footer
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-    <link href="{% static 'loja/css/style.css' %}" rel="stylesheet" type="text/css">
+    <!-- Footer -->
+
 
     <script>
         // Prevent dropdown menu from closing when click inside the form
@@ -37,14 +36,13 @@
 <header class="section-header">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Merch<b>@ISCTE</b></a>
+        <a class="navbar-brand" href="{% url 'loja:index' %}">Merch<b>@ISCTE</b></a>
         <button class="navbar-toggler" data-target="#navbarCollapse" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Collection of nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse justify-content-start" id="navbarCollapse">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{% url 'loja:index' %}">Ínicio</a>
                 <a class="nav-item nav-link" href="#sobre">Sobre</a>
                 <div class="nav-item dropdown">
                     <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" href="#">Services</a>
@@ -64,6 +62,7 @@
             </form>
             <div class="navbar-nav action-buttons ml-auto">
                 <a class="nav-item nav-link active" href="{% url 'loja:carrinho' %}">Carrinho</a>
+
                 {% if not request.user.is_authenticated %}
                 <a class="nav-item nav-link dropdown-toggle mr-3" data-toggle="dropdown" href="#">Login</a>
                 <div class="dropdown-menu login-form">
@@ -85,6 +84,7 @@
                 </div>
                 <a class="btn btn-primary" href="{% url 'loja:registaruser' %}">Registar</a>
                 {% else %}
+                <a class="nav-item nav-link active" href="{% url 'loja:perfil' %}">Perfil</a>
                 <a class="nav-item nav-link dropdown-toggle mr-3" href="{% url 'loja:logoutview' %}">Logout</a>
                 {% endif %}
 
@@ -93,57 +93,102 @@
     </nav>
 </header>
 
+{% if request.user.is_authenticated %}
+{% if request.user.is_superuser %}
+<h2> Olá admin </h2>
+{% else %}
+<h2> Olá {{ request.user.username}} </h2>
+{% endif %}
+{% else %}
+{% endif %}
+
 {% endblock %}
 
-<div class="demo">
-    {% block blocobody %}
-    <!-- all other page content -->
-    X
+{% block blocobody %}
 
-    <p>
-        sadafd
-    </p>
+{% if request.user.is_superuser %}
 
-
-    X
-    {% endblock %}
-</div>
-
-
-{% block footer-dark %}
-
-<div class="footer-dark">
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 item">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">Development</a></li>
-                        <li><a href="#">Hosting</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-6 col-md-3 item">
-                    <h3>About</h3>
-                    <ul>
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6 item text" id="sobre">
-                    <h3>Sobre</h3>
-                    <p>Cadeira de DIAM do 3ºAno de LEI no ISCTE-IUL.</p>
-                </div>
-                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
-                        class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
-                        href="#"><i class="icon ion-social-instagram"></i></a></div>
+<div class="navbar-nav action-buttons ml-auto">
+    <a class="nav-item nav-link dropdown-toggle mr-3" data-toggle="dropdown" href="#">Criar Categoria</a>
+    <div class="dropdown-menu categoria-form">
+        <form action="{% url 'loja:nova_categoria' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label>Categoria</label>
+                <input class="form-control" id="categoria_nome" name="categoria_nome" required="required"
+                       type="text">
+                <label>Imagem</label>
+                <input class="form-control" id="categoria_file" name="categoria_file" type="file">
             </div>
-            <p class="copyright">Merch@ISCTE © 2022</p>
-        </div>
-    </footer>
+            <input class="btn btn-primary btn-block" type="submit" value="Criar">
+        </form>
+    </div>
 </div>
+
+<div class="navbar-nav action-buttons ml-auto">
+    <a class="nav-item nav-link dropdown-toggle mr-3" data-toggle="dropdown" href="#">Criar Produto</a>
+    <div class="dropdown-menu categoria-form">
+        <form action="{% url 'loja:novo_produto' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label>Nome</label>
+                <input class="form-control" id="produto_nome" name="categoria_nome" required="required" type="text">
+                <label>Descrição</label>
+                <input class="form-control" id="produto_texto" name="categoria_nome" type="text">
+                <label>Preço</label>
+                <input class="form-control" id="preco" name="categoria_nome" required="required" type="number">
+                <label for="categoria_select">Categoria:</label>
+                <select id="categoria_select" name="categoria_select">
+                    {% if lista_categoria %}
+                        {% for categoria in lista_categoria %}
+                        <option value="{{ categoria.categoria_nome }}">{{ categoria.categoria_nome }}</option>
+                        {% endfor %}
+                    {% endif %}
+                </select>
+                <br>
+                <label>Imagem</label>
+                <input class="form-control" id="produto_file" name="file" type="file">
+            </div>
+            <input class="btn btn-primary btn-block" type="submit" value="Criar">
+        </form>
+    </div>
+</div>
+
+{% endif %}
+
+
+{% if error_lista_categoria %}
+<p><strong>{{ error_message }}</strong></p>
+{% endif %}
+
+{% if lista_categoria %}
+<ul class="common-list">
+    {% for categoria in lista_categoria %}
+    <li class="common-list-item">
+        <a href="#">
+            <img max-width="30px" src="{{ categoria.foto }}">
+        </a>
+        <h4>{{ categoria.categoria_nome }}</h4>
+    </li>
+
+    {% endfor %}
+</ul>
+{% else %}
+<p>Nao ha categorias disponíveis.</p>
+{% endif %}
+
+
+{% endblock %}
+
+
+{% block lista-main %}
+
+<a class="btn btn-primary" href="#">X</a>
+
+
+{% endblock %}
+
+{% block footer %}
 
 
 {% endblock %}
