--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -8,9 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <title>
+        {% block title %}
+        Base
+        {% endblock %}
+    </title>
 </head>
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -48,7 +52,7 @@
             </ul>
             <ul class="navbar-nav inline my-2 my-lg-0">
                 {% if not request.user.is_authenticated %}
-                <li class="nav-item dropdown dropleft">
+                <li class="nav-item dropdown dropstart">
                     <a class="nav-link" href="#" id="navbarDropdown2" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Login
@@ -85,6 +89,7 @@
     </div>
 </nav>
 
+{% block blocobody %}
 <div class="container-fluid d-md-flex align-items-stretch">
 
     <div id="content" class="p-4 p-md-5 pt-5">
@@ -92,7 +97,7 @@
         {% if lista_produto %}
         <div class="row justify-content-center" style="margin-left:0px;margin-right:0px;">
             {% if request.user.is_superuser %}
-                <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem;">
                 <img src="/static/media/computer.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Produto Nome</h5>
@@ -101,7 +106,7 @@
                     <li class="list-group-item">Preço: Produto Preço</li>
                 </ul>
                 <div class="card-body">
-                    <a href="CriarProduto" >Criar Produto</a>
+                    <a href="CriarProduto">Criar Produto</a>
                 </div>
             </div>
             {% endif %}
@@ -119,9 +124,32 @@
                     <a href="{% url 'loja:carrinho' %}" class="btn ">
                         <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
                     </a>
-                    <a href="" class="btn btn-primary">Ver Produto</a>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">
+                        Ver Produto
+                    </button>
+                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                         tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    ...
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                    </button>
+                                    <button type="button" class="btn btn-primary">Understood</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     {% if request.user.is_superuser %}
-                    <a href="{% url 'loja:apagar_produto' produto.id %}" >Apagar Produto</a>
+                    <a href="{% url 'loja:apagar_produto' produto.id %}">Apagar Produto</a>
                     {% endif %}
                 </div>
             </div>
@@ -153,6 +181,9 @@
         </div>
     </nav>
 </div>
+
+{% endblock %}
+
 
 <form action="{% url 'loja:nova_categoria' %}" enctype="multipart/form-data" method="post">
     {% csrf_token %}
